# convertx

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/convertx/: all.html  constant.BPS_IN_MBPS.html  constant.FEET_IN_METER.html  constant.INCHES_IN_METER.html  constant.KELVIN_OFFSET.html  constant.KG_IN_LB.html  constant.OZ_IN_KG.html  enum.AreaUnit.html  enum.Cli.html  enum.DataRateUnit.html  enum.LengthUnit.html  enum.MassUnit.html  enum.PressureUnit.html  enum.SpeedUnit.html  enum.TempUnit.html  enum.VolumeUnit.html  fn.bytes_to_human_readable.html  fn.bytes_to_mb.html  fn.convert_area.html  fn.convert_datarate.html  fn.convert_length.html  fn.convert_mass.html  fn.convert_pressure.html  fn.convert_speed.html  fn.convert_temp.html  fn.convert_volume.html  fn.main.html  fn.seconds_to_human_readable.html  index.html  macro.enum_with_variants!.html  macro.enum_with_variants.html  sidebar-items.js
docs/search.desc/convertx/: convertx-desc-0-.js
docs/src/convertx/: main.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.PartialEq.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/structopt/: trait.StructOpt.js
src/: main.rs
tests/: cli_tests.rs
(+1 files in other folders)
