[package]
name = "convertx"
version = "0.1.0"
edition = "2021"
authors = ["Jesse JCharis"]
description = "Multipurpose Units Converter"
readme = "README.md"
homepage = "https://jcharistech.github.io/convertx/convertx/"
repository = "https://github.com/jcharistech/convertx"
keywords = ["converter", "units", "unit-conversion", "bytes","convertx"]
categories = ["cryptography", "command-line-interface", "encoding"]
license = "MIT"

[dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
structopt = "0.3.26"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3